Мелкие дополнения
